# rustlings

./: README.md  commit.sh  folder_structure_for_rust_backend_withActix_web.txt  test_rust_codes  test_rust_codes.rs
actix_web_task_service/: Cargo.toml
actix_web_task_service/src/: main.rs
actix_web_task_service/src/api/: task.rs
coding_challenges/: .~lock.rust_coding_exercises.docx#  Cargo.toml  README.md  fizz_buzz_lucky.rs  fizz_buzz_twist  fizz_buzz_twist.rs  pallindrome_checker  pallindrome_checker.rs  rust_coding_exercises.docx  stack_with_peek_n_rollback.rs  validate_brackets  validate_brackets.rs
crud-with-sea_orm/: .env  AUTHENTICATION.md  Cargo.toml  QUICK_SECURITY_IMPROVEMENTS.md  SECURITY_OPTIONS.md  TOKEN_COMPARISON.md  TOKEN_LIFECYCLE.md  add_missing_columns.sql
crud-with-sea_orm/entity/: Cargo.toml
crud-with-sea_orm/entity/src/: users.rs
crud-with-sea_orm/entity/src/refresh_tokens/: mod.rs
crud-with-sea_orm/migration/: Cargo.toml
crud-with-sea_orm/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260307_175048_create_users.rs  m20260307_180000_add_auth_to_users.rs  m20260307_190000_create_refresh_tokens.rs
crud-with-sea_orm/src/: Cargo.toml  lib.rs  main.rs  postgres.rs
crud-with-sea_orm/src/api/: mod.rs
crud-with-sea_orm/src/api/auth/: dto.rs  handlers.rs  mod.rs  routes.rs
crud-with-sea_orm/src/api/refresh_tokens/: mod.rs  repository.rs
crud-with-sea_orm/src/api/users/: dto.rs  handlers.rs  mod.rs  repository.rs  routes.rs  service.rs
crud-with-sea_orm/src/models/entity/src/: users.rs
crud-with-sea_orm/src/shared/: auth.rs  mod.rs
crud-with-sea_orm/src/shared/config/: postgres.rs
crud-with-sea_orm/src/shared/errors/: api_errors.rs
crud-with-sea_orm/src/shared/middleware/: auth.rs
crud-with-sea_orm/src/shared/models/: users.rs
crud-with-sea_orm/src/shared/utils/: config_utils.rs  mod.rs
crud-with-sea_orm/tests/: auth_flow.rs
rustlings/: .rustlings-state.txt
rustlingsv2/rustlings/: .rustlings-state.txt  test_rust_codes  test_rust_codes.rs
to_do/: Cargo.toml
to_do/src/: main.rs  todo.rs
(+61 files in other folders)
