[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc.28", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }

# Convenience serde for request/response (derive macros enabled)
serde = { version = "1.0", features = ["derive"] }
uuid = "1.22.0"
